--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,11 @@ endif()
 project(shinysocks
     DESCRIPTION "Socks Proxy server"
     HOMEPAGE_URL https://github.com/jgaa/shinysocks
-    VERSION 1.3.5
+    VERSION 1.4.0
     LANGUAGES CXX
 )
+
+option(USE_STATIC_BOOST "Link Boost statically" ON)
 
 add_definitions(-DSHINYSOCKS_VERSION=\"${CMAKE_PROJECT_VERSION}\")
 
@@ -22,6 +24,10 @@ if(NOT DEFINED USE_BOOST_VERSION)
     set(USE_BOOST_VERSION 1.69)
 endif()
 
+if(USE_STATIC_BOOST)
+    set(Boost_USE_STATIC_LIBS   ON)
+endif()
+
 find_package(Boost ${USE_BOOST_VERSION} REQUIRED COMPONENTS
     system
     program_options
@@ -29,10 +35,8 @@ find_package(Boost ${USE_BOOST_VERSION} REQUIRED COMPONENTS
     coroutine
     context
     )
-
 add_executable(${PROJECT_NAME} Manager.cpp Listener.cpp Proxy.cpp main.cpp shinysocks.h logging.h)
 add_dependencies(${PROJECT_NAME} logfault)
-
 include_directories(${Boost_INCLUDE_DIR})
 
 set_target_properties(${PROJECT_NAME}
